@@ -5,7 +5,7 @@ AC_CANONICAL_SYSTEM
 AC_EXEEXT
 
 PACKAGE=mbuffer
-VERSION=20080329
+VERSION=20080502
 
 AC_PREFIX_DEFAULT(/usr/local)
 test "$prefix" = NONE && prefix=/usr/local
@@ -13,7 +13,7 @@ test "$exec_prefix" = NONE && exec_prefix=$prefix
 
 
 AC_LANG_C
-CFLAGS="${CFLAGS=-O}"
+CFLAGS="${CFLAGS=-g -O}"
 AC_SUBST(CFLAGS)
 AC_PROG_CC(cc gcc)
 AC_C_RESTRICT
@@ -38,7 +38,7 @@ AC_SEARCH_LIBS(gethostbyname,nsl,,AC_MSG_ERROR(could not find the library contai
 #AC_SEARCH_LIBS(hstrerror,resolv,,AC_MSG_ERROR(could not find the library containing hstrerror))
 AC_CHECK_LIB(resolv,hstrerror)
 AC_SEARCH_LIBS(sendfile,sendfile,AC_DEFINE(HAVE_SENDFILE,1,libsendfile is available),AC_MSG_WARN(could not find sendfile support))
-AC_CHECK_HEADER(sendfile.h,AC_DEFINE(HAVE_SENDFILE_H,1,sendfile in sendfile.h),)
+AC_CHECK_HEADER(sys/sendfile.h,AC_DEFINE(HAVE_SENDFILE_H,1,sendfile in sendfile.h),)
 
 
 AC_ARG_ENABLE(debug,
